--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.4",
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "framer-motion": "^6.3.16",
     "next": "12.2.0",
+    "http-proxy-middleware": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
