--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "framer-motion": "^6.3.16",
-    "next": "12.2.0",
     "http-proxy-middleware": "^2.0.6",
+    "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -25,6 +25,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
+    "next-transpile-modules": "^9.1.0",
     "typescript": "4.7.4"
   }
 }
