--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "home",
   "version": "0.1.0",
-  "private": true,
+   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
+    "devstandard": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,6 +15,9 @@
     "@chakra-ui/react": "^2.3.5",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@tensorflow/tfjs": "^4.1.0",
+    "@tensorflow/tfjs-vis": "^1.5.1",
+    "chart.js": "^3.9.1",
     "framer-motion": "^6.3.16",
     "http-proxy-middleware": "^2.0.6",
     "next": "12.2.0",
@@ -25,6 +30,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
+    "next-sitemap": "^3.1.29",
     "next-transpile-modules": "^9.1.0",
     "typescript": "4.7.4"
   }
