--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@emotion/styled": "^11.10.6",
     "@tensorflow/tfjs": "^4.1.0",
     "@tensorflow/tfjs-vis": "^1.5.1",
+    "@types/ramda": "^0.28.23",
     "chart.js": "^3.9.1",
     "framer-motion": "^10.6.0",
     "http-proxy-middleware": "^2.0.6",
     "next": "12.2.0",
+    "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
